# flask-starter

./: .gitignore  README.md  db.sqlite  manage.py  pyproject.toml
app/: bootstrap.py  config.py  plugins.py
app/albums/: __init__.py  models.py  views.py
app/auth/: __init__.py  constants.py  models.py  views.py
tests/: test_basic.py
